@@ -3,7 +3,9 @@ $Id$
 2015-04-23  Christian Franke  <franke@computer.org>
 
 	configure.ac: Add '--with-systemdenvfile=auto' option as new default.
+	Remove no longer needed ENABLE_CAPABILITIES conditional.
 	Makefile.am: Silence build of smartd.service file.
+	Integrate all ENABLE_* conditionals in MAN_FILTER script.
 
 2015-04-21  Christian Franke  <franke@computer.org>
 
